cc_library(
    name = "hal_interface",
    hdrs = [
        "peripheral.h",
        "peripheral_id.h",
        "register.h",
    ],
    deps = [
        ":error",
    ],
)

cc_library(
    name = "hal",
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
        ":hal_interface",
        ":irq",
    ] + select({
        "//platforms:stm32_core": [
            ":stm32_peripherals",
        ],
        "@platforms//os:linux": [
            ":simulation",
        ],
        "//conditions:default": [
        ],
    }),
)

cc_library(
    name = "irq",
    hdrs = [
        "irq.h",
    ],
    deps = select({
        "//platforms:stm32_core": [
            ":irq_arm",
        ],
        "@platforms//os:linux": [
            ":irq_noop",
        ],
        "//conditions:default": [
        ],
    }),
)

cc_library(
    name = "irq_arm",
    hdrs = ["irq_arm.h"],
    target_compatible_with = [
        "@platforms//cpu:armv7e-mf",
        "@platforms//os:none",
    ],
)

cc_library(
    name = "irq_noop",
    hdrs = ["irq_noop.h"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

cc_library(
    name = "simulation",
    hdrs = [
        "interceptor.h",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

cc_library(
    name = "error",
    hdrs = [
        "error.h",
    ],
    deps = select({
        "//platforms:stm32_core": [
            ":error_loop",
        ],
        "@platforms//os:linux": [
            ":error_terminate",
        ],
        "//conditions:default": [
        ],
    }),
)

cc_library(
    name = "error_loop",
    srcs = ["error_loop.cc"],
    target_compatible_with = [
        "@platforms//cpu:armv7e-mf",
        "@platforms//os:none",
    ],
    deps = [
        ":irq",
    ],
)

cc_library(
    name = "error_terminate",
    srcs = ["error_terminate.cc"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    deps = [
        ":irq",
    ],
)

cc_library(
    name = "stm32_peripherals",
    hdrs = [
        "stm32_peripheral_ids.h",
    ],
    target_compatible_with = [
        "//platforms:stm32_core",
    ],
    deps = [
        ":hal_interface",
    ],
)

cc_test(
    name = "register_test",
    srcs = ["register_test.cc"],
    deps = [
        ":hal",
        "//bits",
        "//third_party/gtest",
    ],
)
