cc_library(
    name = "http",
    hdrs = [
        "static_file_server.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//buffer",
        "//io",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/uwebsockets",
    ],
)

cc_binary(
    name = "simple_http_server",
    srcs = [
        "simple_http_server.cc",
    ],
    deps = [
        ":http",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/uwebsockets",
    ],
)
