cc_library(
    name = "io",
    hdrs = [
        "file_data_source.h",
        "file_reader.h",
        "looping_file_reader.h",
    ],
    linkopts = ["-lstdc++fs"],
    visibility = ["//visibility:public"],
    deps = [
        "//buffer",
    ],
)

cc_test(
    name = "file_reader_test",
    srcs = ["file_reader_test.cc"],
    data = [
        "lorem_ipsum.txt",
    ],
    deps = [
        ":io",
        "//buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "looping_file_reader_test",
    srcs = ["looping_file_reader_test.cc"],
    data = [
        "lorem_ipsum.txt",
    ],
    deps = [
        ":io",
        "//buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
