cc_library(
    name = "io",
    srcs = [
        "managed_directory.cc",
        "temp_filename.cc",
    ],
    hdrs = [
        "file_data_source.h",
        "file_reader.h",
        "looping_file_reader.h",
        "managed_directory.h",
        "temp_filename.h",
    ],
    linkopts = ["-lstdc++fs"],
    target_compatible_with = select(
        {
            "@platforms//os:none": [
                "@platforms//:incompatible",
            ],
            "//conditions:default": [],
        },
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//buffer",
        "//random",
        "//string",
        "//time",
    ],
)

cc_test(
    name = "file_reader_test",
    srcs = ["file_reader_test.cc"],
    data = [
        "lorem_ipsum.txt",
    ],
    deps = [
        ":io",
        "//buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "looping_file_reader_test",
    srcs = ["looping_file_reader_test.cc"],
    data = [
        "lorem_ipsum.txt",
    ],
    deps = [
        ":io",
        "//buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
