cc_library(
    name = "message",
    hdrs = [
        "announce.h",
        "handler.h",
        "message.h",
        "queue.h",
        "ring_buffer.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "queue_test",
    srcs = [
        "queue_test.cc",
    ],
    deps = [
        ":message",
        "//third_party/gtest",
    ],
)
