cc_library(
    name = "build_time",
    hdrs = ["build_time.h"],
    linkstamp = "build_time.cc",
    visibility = ["//visibility:public"],
    deps = [
        "//hal",
    ],
    alwayslink = True,
)

cc_library(
    name = "flash",
    hdrs = ["flash.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "firmware",
    srcs = ["firmware.cc"],
    hdrs = ["firmware.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":flash",
    ],
)
