load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("//platforms:platform.bzl", "arch_name")

pkg_filegroup(
    name = "tvsc_bundle",
    srcs = [
        "//services:service_binaries",
    ],
    prefix = "/usr",
)

pkg_filegroup(
    name = "tvsc_bundle_with_tests",
    testonly = True,
    srcs = [
        "//hello_world:hello_world_binaries",
        "//services:service_binaries",
        "//third_party/soapy_remote:test_binaries",
    ],
    prefix = "/usr",
)

VERSION_MAJOR = "0"

VERSION_MINOR = "0"

VERSION_PATCH = "1"

VERSION_STRING = VERSION_MAJOR + "." + VERSION_MINOR + "." + VERSION_PATCH

PACKAGE_NAME = "tvsc"

TEST_PACKAGE_NAME = "tvsc-with-tests"

PACKAGE_FILE_BASENAME = PACKAGE_NAME + "-" + VERSION_STRING

TEST_PACKAGE_FILE_BASENAME = TEST_PACKAGE_NAME + "-" + VERSION_STRING

pkg_tar(
    name = "tvsc_tarball",
    srcs = [
        ":tvsc_bundle",
    ],
    extension = "tgz",
    package_file_name = PACKAGE_FILE_BASENAME + ".tgz",
)

pkg_tar(
    name = "tvsc_with_tests_tarball",
    testonly = True,
    srcs = [
        ":tvsc_bundle_with_tests",
    ],
    extension = "tgz",
    package_file_name = TEST_PACKAGE_FILE_BASENAME + ".tgz",
)

pkg_deb(
    name = "tvsc_deb",
    architecture = arch_name(),
    data = ":tvsc_tarball",
    description = "Tower-in-a-box system from TVSC",
    maintainer = "info@stellarcorp.tv",
    package = PACKAGE_NAME,
    version = VERSION_STRING,
)

pkg_deb(
    name = "tvsc_with_tests_deb",
    testonly = True,
    architecture = arch_name(),
    data = ":tvsc_with_tests_tarball",
    description = "Tower-in-a-box system with development tests from TVSC",
    maintainer = "info@stellarcorp.tv",
    package = TEST_PACKAGE_NAME,
    version = VERSION_STRING,
)
