cc_library(
    name = "packet",
    hdrs = [
        "packet_queue.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//buffer",
        "//random",
    ],
)

cc_test(
    name = "packet_queue_test",
    srcs = ["packet_queue_test.cc"],
    deps = [
        ":packet",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
