load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_library(
    name = "pubsub",
    hdrs = [
        "pub_sub_service.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/glog",
        "//third_party/grpc",
        "//third_party/uwebsockets",
    ],
)

cc_library(
    name = "web_socket_pub_sub",
    hdrs = [
        "web_socket_topic.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":pubsub",
        "//third_party/glog",
        "//third_party/grpc",
        "//third_party/uwebsockets",
    ],
)

proto_library(
    name = "test_proto",
    testonly = True,
    srcs = ["test.proto"],
)

cc_proto_library(
    name = "test_cc_proto",
    testonly = True,
    deps = [":test_proto"],
)

cc_grpc_library(
    name = "test_cc_grpc",
    testonly = True,
    srcs = [":test_proto"],
    generate_mocks = True,
    grpc_only = True,
    deps = [":test_cc_proto"],
)

cc_test(
    name = "pub_sub_service_test",
    srcs = [
        "pub_sub_service_test.cc",
    ],
    deps = [
        ":pubsub",
        ":test_cc_grpc",
        ":test_cc_proto",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
