load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_library(
    name = "pubsub",
    hdrs = [
        "publication_service.h",
        "streamer.h",
        "topic.h",
    ],
    target_compatible_with = select(
        {
            "@platforms//os:none": [
                "@platforms//:incompatible",
            ],
            "//conditions:default": [],
        },
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//third_party/glog",
        "//third_party/grpc",
    ],
)

cc_library(
    name = "web_socket_pub_sub",
    hdrs = [
        "web_socket_topic.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":pubsub",
        "//third_party/glog",
        "//third_party/grpc",
        "//third_party/uwebsockets",
    ],
)

proto_library(
    name = "test_proto",
    testonly = True,
    srcs = ["test.proto"],
)

cc_proto_library(
    name = "test_cc_proto",
    testonly = True,
    target_compatible_with = select(
        {
            "@platforms//os:none": [
                "@platforms//:incompatible",
            ],
            "//conditions:default": [],
        },
    ),
    deps = [":test_proto"],
)

cc_grpc_library(
    name = "test_cc_grpc",
    testonly = True,
    srcs = [":test_proto"],
    generate_mocks = True,
    grpc_only = True,
    deps = [":test_cc_proto"],
)

cc_test(
    name = "publication_service_test",
    srcs = [
        "publication_service_test.cc",
    ],
    deps = [
        ":pubsub",
        ":test_cc_grpc",
        ":test_cc_proto",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
