load("//platforms:hex.bzl", "hex")

cc_library(
    name = "random",
    srcs = select({
        "//platforms:teensyduino_core": ["arduino_random.cc"],
        "//platforms:stm32_core": ["stm32_random.cc"],
        "//platforms:std_cpp": ["std_cpp_random.cc"],
    }),
    hdrs = [
        "random.h",
    ],
    visibility = ["//visibility:public"],
    deps = select({
        "//platforms:teensyduino_core": [
            "//third_party/arduino:core",
            "//third_party/arduino:entropy",
        ],
        "//platforms:stm32_core": [
            "//hal/random",
        ],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "random_number_generator",
    srcs = ["random_number_generator.cc"],
    deps = [
        ":random",
        "//hal/gpio",
        "//hal/output",
        "//hal/time",
    ],
)

hex(
    name = "random_number_generator_hex",
    src = ":random_number_generator",
    out = "random_number_generator.hex",
    target_compatible_with = select({
        "@platforms//os:none": [
        ],
        "//conditions:default": [
            "@platforms//:incompatible",
        ],
    }),
)
