load("//platforms:hex.bzl", "hex")

cc_library(
    name = "random",
    srcs = select({
        "//platforms:stm32_core": ["stm32_random.cc"],
        "//platforms:std_cpp": ["std_cpp_random.cc"],
    }),
    hdrs = [
        "random.h",
    ],
    visibility = ["//visibility:public"],
    deps = select({
        "//platforms:stm32_core": [
            "//hal/random",
            "//hal/board",
        ],
        "//conditions:default": [],
    }),
)
