cc_library(
    name = "scheduler",
    hdrs = [
        "scheduler.h",
        "task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hal",
        "//hal/rcc",
        "//time",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = [
        "sample_tasks.h",
    ],
    deps = [
        ":scheduler",
        "//time",
    ],
)

cc_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.cc"],
    deps = [
        ":scheduler",
        ":testing",
        "//hal/rcc",
        "//time:simulation_clock",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "task_test",
    srcs = ["task_test.cc"],
    deps = [
        ":scheduler",
        ":testing",
        "//time:simulation_clock",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
