cc_library(
    name = "scheduler",
    hdrs = [
        "scheduler.h",
        "task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hal/rcc",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = [
        "sample_tasks.h",
    ],
    deps = [
        ":scheduler",
    ],
)

cc_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.cc"],
    deps = [
        ":scheduler",
        ":testing",
        "//hal/rcc",
        "//third_party/glog",
        "//third_party/gtest",
        "//time:simulation_clock",
    ],
)

cc_test(
    name = "task_test",
    srcs = ["task_test.cc"],
    deps = [
        ":scheduler",
        ":testing",
        "//third_party/glog",
        "//third_party/gtest",
        "//time:simulation_clock",
    ],
)
