cc_library(
    name = "serial_wire",
    srcs = [
        "serial_wire.cc",
        "target.cc",
    ],
    hdrs = [
        "flash.h",
        "serial_wire.h",
        "target.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
        "//hal/programmer",
        "//time:embedded_clock",
    ],
)
