cc_library(
    name = "serial_wire",
    srcs = [
        "flash.cc",
        "serial_wire.cc",
        "target.cc",
    ],
    hdrs = [
        "flash.h",
        "serial_wire.h",
        "target.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
        "//hal/programmer",
        "//meta:flash",
        "//time:embedded_clock",
    ],
)
